specs/001-typescript-to-zig-native/examples/valid/string-basics.ts
let greeting = "hello" + " world";
console.log(greeting);
console.log(greeting.length);
