specs/001-typescript-to-zig-native/examples/invalid/import-bare.ts
import add from "math";

console.log(1);
